# CodeNote

./: build.gradle
app/: build.gradle  libs
app/src/androidTest/java/com/blood/nativedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/blood/nativedemo/aidl/: IMyAidlInterface.aidl
app/src/main/assets/: DataDriverPlugin-third-debug.apk
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/blood/nativedemo/: BindingCallback.kt  BindingViewHolder.kt  LifecycleActivity.kt  MainActivity.kt  MainAdapter.kt  MainApp.kt  MainBean.kt
app/src/main/java/com/blood/nativedemo/aidl/: AidlService.java  JavaServiceActivity.java  MyService.java  ServiceActivity.kt
app/src/main/java/com/blood/nativedemo/apps/: AppsActivity.kt
app/src/main/java/com/blood/nativedemo/copy/: CopyAssetActivity.kt  CopyUtil.java
app/src/main/java/com/blood/nativedemo/fragment_pop/: FragmentA.kt  FragmentB.kt  FragmentC.kt  FragmentPushPopActivity.kt
app/src/main/res/layout/: activity_apps.xml  activity_copy_asset.xml  activity_fragment_push_pop.xml  activity_gps.xml  activity_java_service.xml  activity_jni.xml  activity_main.xml  activity_property.xml  activity_qrcode.xml  activity_service.xml  activity_sqlite.xml  activity_test.xml  activity_view_pager2.xml  activity_webview.xml  layout_fragment_a.xml  layout_item_viewpager.xml
app/src/main/res/values/: styles.xml  themes.xml
app/src/test/java/com/blood/nativedemo/: ExampleUnitTest.java  JavaTest1.java
gradle/wrapper/: gradle-wrapper.properties
libs/android/: app.aar
(+43 files in other folders)
